--- a/templates/options.html
+++ b/templates/options.html
@@ -6,6 +6,10 @@
         {% endfor %}
     </div>
     <div>
+    	<p>Provide yout token copied from the terminal:</p>
+    	<input type="text" name="token">
+    </div>
+    <div>
         <button type="submit" class="btn btn-default">GO</button>
     </div>
 </form>
