--- a/templates/redirect_login.html
+++ b/templates/redirect_login.html
@@ -2,7 +2,7 @@
   <head>
 	<link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
   	<title>
-  		Caravel - Error
+  		Caravel - Go to Login
   	</title>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
   </head>
@@ -11,15 +11,8 @@
       <img src="/static/caravel.svg">
     </div>
     <div>
-      <h2>Caravel server encountered exception(s):</h2>
-    </div>
-    <div>
-        {% for ei in e %}
-        <code><p>{{ ei }}</p></code>
-        {% endfor %}
-    </div>
-    <div>
-      <p>Go back to the <a href="{{ url_for('index') }}"><b>Home page</b></a>
+      <h2>Authentication instructions</h2>
+      <p>You need an authentication token, go to <a href="{{ url_for('login') }}">login</a> to get it.</p>
     </div>
   </body>
 </html>
