--- a/templates/invalid_token.html
+++ b/templates/invalid_token.html
@@ -3,5 +3,5 @@
 {% block content %}
   <h2>Invalid token</h2>
   <p>The provided token is invalid or has expired, make sure you copy the token from the terminal correctly.</p>
-  <p>Go <a href="{{ url_for('index') }}">back.</a></p>
+  <p>Go <a href="{{ url_for('process') }}">back.</a></p>
 {% endblock %}
